parser/src/tests/corpus/negatives/bare-evocation/expected
parse error: from "negatives/bare-evocation/input", line 1:
| !x
| ^^
|
+-> Syntax error: pure expressions cannot contain evoke effects, e.g. `!…`

